--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "jest-coverage-report-action",
+    "name": "react-coverage-report-action",
     "private": true,
     "version": "1.0.0",
     "description": "",
@@ -7,7 +7,7 @@
     "scripts": {
         "test": "jest",
         "test:log-coverage": "jest --coverage",
-        "test:coverage": "jest --silent --testLocationInResults --ci --all --coverage --json --outputFile=\"report.json\"",
+        "test:coverage": "jest --silent --testLocationInResults --ci --all --coverage --json --outputFile=\"../report.json\"",
         "test:watch": "jest --watch",
         "build": "tsc --noEmit --incremental && node esbuild.cjs",
         "build:dev": "node esbuild.cjs",
