--- a/action.yml
+++ b/action.yml
@@ -1,6 +1,6 @@
 name: 'Jest coverage report'
 description: 'Track your code coverage in each pull request.'
-author: 'Artiom Tretjakovas <artiom.tretjakovas2@gmail.com>'
+author: 'Subhash Mahimaluri <subhash.mahimaluri@shell.com>'
 branding:
     icon: 'activity'
     color: 'gray-dark'
